# brian2tools

./: .gitignore  .readthedocs.yml  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  README_POC.md  pyproject.toml  rtd-requirements.txt  setup.cfg  setup.py
.github/workflows/: python-test-conda.yml  static_analysis.yml  testsuite.yml
brian2tools/: __init__.py  conftest.py  serialization.py  verify_device.py
brian2tools/baseexport/: __init__.py  collector.py  device.py  exporter.py  helper.py  model.fury
brian2tools/baseimport/: __init__.py  importer.py
brian2tools/brian2lems/: lemsrendering.py
brian2tools/jsonexport/: __init__.py  jsonexport.py
brian2tools/mdexport/: __init__.py  expander.py  human_readable_export.py  mdexporter.py  template.py
brian2tools/modelfitting/: __init__.py  differential_evolution.py  modelfitting.py
brian2tools/nmlexport/: LEMSUnitsConstants.xml  __init__.py  cgmhelper.py  lemsexport.py  lemsrendering.py  supporting.py
brian2tools/nmlimport/: helper.py  nml.py
brian2tools/nmlutils/: utils.py
brian2tools/plotting/: __init__.py  base.py  data.py  morphology.py  synapses.py
brian2tools/stdformatexport/: __init__.py  simple_collectors.py  stdexport.py
brian2tools/templates/: EventMonitor-default.md  EventMonitor-template1.md  EventMonitor-template2.md  Synapses-table.md  (+23 more)
doc/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  release_notes.html  search.html  searchindex.js
docs_sphinx/: Makefile  conf.py  index.rst  make.bat  plotting.rst  release_notes.rst
examples/: poc_exporter_demo.py
reference/: brian2tools.baseexport.collector.rst  brian2tools.baseexport.helper.rst  brian2tools.baseexport.rst  brian2tools.nmlexport.cgmhelper.rst  brian2tools.nmlexport.lemsrendering.rst  brian2tools.nmlexport.rst  brian2tools.nmlimport.rst  brian2tools.plotting.base.rst  brian2tools.plotting.data.rst  brian2tools.plotting.rst  brian2tools.rst  modules.rst
(+149 files in other folders)
